--- a/assest/styles/styles.css
+++ b/assest/styles/styles.css
@@ -134,14 +134,33 @@ a.active,a:hover{
       font-size: 20px;
   }
   a:hover, a.active{
-      background: none;
+      background: rgb(147, 153, 62);
       color: rgb(38, 33, 31);    
   }
   #check:checked ~ ul{
       left: 0;
   }
 }
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+  }
 
+  nav ul li {
+    margin: 30px 0;
+  }
+
+  nav ul li .dropdown-content {
+    position: relative;
+    min-width: 100%;
+    box-shadow: none;
+  
+  }
+
+  .dropdown {
+    display: block; /* Override the inline-block display for small screens */
+  }
+}
 
 .logo{
   width: 100px;
