--- a/assest/styles/styles.css
+++ b/assest/styles/styles.css
@@ -169,6 +169,24 @@ a.active,a:hover{
   top: -70px;
   left: calc(50% - 50px);
 }
+
+.landing-text{
+  text-align: center;
+}
+
+.landing-text-para{
+  font-size: larger;
+  padding: 10px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.landing-textH2{
+  font-size: 40px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bolder;
+}
+
+
 /* Scrollable Container */
 .scrollable-container {
   max-height: 60vh; /* Adjust the height as needed */
