--- a/assest/styles/styles.css
+++ b/assest/styles/styles.css
@@ -119,7 +119,8 @@ a.active,a:hover{
       position: fixed;
       width: 100%;
       height: 100vh;
-      background:  #68665e;
+      /* background:  #68665e; */
+      background-image: url('../images/img-1.jpg');
       top: 80px;
       left: -100%;
       text-align: center;
@@ -134,7 +135,7 @@ a.active,a:hover{
       font-size: 20px;
   }
   a:hover, a.active{
-      background: rgb(147, 153, 62);
+      background: rgb(235, 191, 12);
       color: rgb(38, 33, 31);    
   }
   #check:checked ~ ul{
@@ -166,7 +167,7 @@ a.active,a:hover{
   width: 100px;
   height:100px;
   position: relative;
-  top: -70px;
+  top: -10px;
   left: calc(50% - 50px);
 }
 
@@ -202,7 +203,7 @@ a.active,a:hover{
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
-  background-image: url('../images/bgImage.jpg');
+  background-image: url('../images/img-2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
