--- a/church1/AdminDashBoard/theme/css/style.css
+++ b/church1/AdminDashBoard/theme/css/style.css
@@ -10316,6 +10316,7 @@ html[dir="rtl"] [direction="rtl"][data-sidebar-style="compact"]:not([data-layout
   padding-top: 0;
   z-index: 2;
   background-color: #343957;
+  /* background-color: #333; */
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
   transition: all .2s ease; }
   .quixnav .quixnav-scroll {
