--- a/church1/assest/styles/styles.css
+++ b/church1/assest/styles/styles.css
@@ -341,7 +341,7 @@ body {
 
 
 footer.footer {
-  background-color: #333; /* New background color */
+  background-color: #0d0727; /* New background color */
   color: #fff;
   text-align: center;
   padding: 10px 0;
