--- a/church1/assest/styles/styles.css
+++ b/church1/assest/styles/styles.css
@@ -549,6 +549,24 @@ th {
   margin: 0 45px;
 }
 
+.signatures{
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center; 
+  margin: 50px 0;
+  font-weight: bolder;
+}
+
+#first-signature{
+  text-align: left;
+  margin: 0 60px;
+}
+
+#second-signature{
+  text-align: right;
+  margin: 0 60px;
+}
+
 .total-amount {
   text-align: center;
   font-size: 18px;
